First solution for exercise5 of Programmiertechnik, Portfolio changed and exercise3 of Logik und Berechenbarkeit added

--- a/1.Semester/eCollaboration/Potrfolio.tex
+++ b/1.Semester/eCollaboration/Potrfolio.tex
@@ -206,6 +206,16 @@ Da man sich hier meistens über Foren austauscht und sich tatsächlich nie physi
 Wie man schon aus der Abbildung \ref{fig:communities} entnehmen kann gibt es Überschneidungen zwischen den Communities \textbf{Feuerwehr,Schützen und Jungbauern}. Die Überschneidungen hierbei ist nicht nur, dass diese sich im selben Ort befinden. Sondern auch, dass die Personen, mit welchem ich mich in diesen Communities treffe meistens in allen der drei Vereine vertreten sind. So ist die Freundesgruppe, mit welcher ich mich Mietens treffe sowohl mitglied bei der Feuerwehr als auch bei den Jungbauern und Schützen.\\
 Die Communities \textbf{DiBSE,Programmieren und Linux} Überschneidungen sich in der Thematik, welche in den Communities behandelt werden. So wird im DiBSE Studium über Programmierung und Linux gesprochen. Weiteres kann ich aus dem DiBSE-Studium Wissen für die anderen Communities nutzen.
 \pagebreak
+\section{Teambuilding mit Among Us}
+\begin{figure}[h]
+\begin{center}
+\includegraphics[scale = 0.2]{amongUs}
+\end{center}
+\caption{Screenshot während des Teambuildings}
+\end{figure}
+Wie man in der Abbildung 6 erkennen kann bestand unser Team aus Kevin,Mira,Michael, Manuel,Mathis,Tobias,Nina und mir. Wir entschieden uns für den Teamnamen \textbf{A little bit DiBSE}. Während dem Teambuilding haben wir drei Runden Among Us gespielt. Während diesen Runden wurde meiner Meinung nach ein gutes Teamgefühl breit. Die Gruppe hat gut als Team funktioniert. Am Anfang wurde denjenigen, welche das Spiel noch nicht kannten die Regeln und Aufgaben grundlegend erklärt. Wir hatten zwei Personen (Kevin und Tobias), welche das Spiel schon kannten. Dies wurde parallel zum Download des Spiels der Teammitglieder bewerkstelligt. Meiner Meinung nach hat kam es in unserer Gruppe zu keinem sozaial loafing oder einem Free-rider Problem. Alle waren sehr bemüht die Regeln des Spiels zu lernen und zusammen als Besatzungsteam die Aufgaben am Schiff zu erledigen und die Imposter zu entlarfen. Da der Großteil von uns das Spiel noch nie gespielt hat, haben wir uns dazu entschieden, dass wir das Spiel auf der geringsten Komplexitätsstufe spielen. Es hätte noch die Moglichkeit gegeben einen Detektiv einzubinden, wir sind aber bei den Rollen Besatzungsmitglied und Imposter geblieben. Das einzige, was am Anfang nicht sehr gut Funktioniert hat war die Kommunikation der einzelnen Teammitglieder. Man konnte erkennen, dass alle am Anfang noch etwas schüchtern waren, dies wurde aber im laufe des Teambuildings immer besser. Da vom Spiel die Rollen der Imposter und der Besatzungsmitglieder jede Rolle Zufällig zugeordnet wurden haben wir keinen fixen Aufgabenmanager,Boten,Zeitwächter,Schreiber,Prozessbeobachter,Präsentator oder Moderator gehabt. Es war eher so, dass derjenige, welcher zum Beispiel den Fund einer Leiche gemeldet hat auch die Moderation der Diskussionsrunde übernahm. Nachdem wir die drei Runden des Spiels  absolviert haben, haben wir uns über die Aufgabe im Portfolio unterhalten. In dieser Unterhaltung ist der Teamname entstanden und wir haben uns Kurz über die Fragen unterhalten, welche hier beantwortet werden sollen. Hier sind wir dann auch zum Schluss gekommen, dass dies jeder für sich selbst zusammenfassen sollte.\vspace{0.5cm}\\
+Persönlich fand ich die Teambuilding-Aktivität sehr spannend und passend. Generell finde ich die Idee ein Teambuilding mittels eines Computerspiels zu machen sehr innovativ. Ich habe schon an vielen Teambuldins teilgenommen, welche zwar immer mit persönlicher Anwesenheit Vorort Verbunden waren, aber nie so schnell Wirkung gezeigt haben. Bei diesem Spiel konnte man sehr gut beobachten wie schnell alles aus unsrem Team zusammengearbeitet haben um die Aufgabe zu erfüllen und aus meiner Sicht auch Spaß daran hatten. Ich finde Spiele als Online-Teambuilding eine sehr gute Idee und finde Among Us ist dafür auch sehr gut geeignet. Damit man sich als Gruppe die einzelnen Rollen einteilten könnte und noch enger als Team zusammen Arbeiten muss fände ich Strategiespiele wie "Age of Empires" oder "Stronghold" eine gute Idee. Der einzige Hacken an diesen Spielen ist es, dass diese nicht Kostenlos sind und man diese auch nicht so einfach wie Among Us online spielen kann. Ansonsten könnte ich mir noch "Online-Escaperooms" als gute Online-Teambuilding-Aktivität vorstellen.
+\pagebreak
 \listoffigures
 \lstlistoflistings
 \end{document}
