Finalized exercise 4 of Logik und Berechenbarkeit, added the last task to my Portfolio and added the report of the SFSCON

--- a/1.Semester/eCollaboration/Potrfolio.tex
+++ b/1.Semester/eCollaboration/Potrfolio.tex
@@ -74,10 +74,10 @@
 \textbf{\textsf{Management Center}} \textcolor{namecolor}{\textsf{Innsbruck}}
 \vfill
 \noindent
-{\huge \textsf{Portfolio eCollaboration}}
+{\huge \textsf{Portfolio\vspace{0.2 cm}\\eCollaboration}}
 \vskip\baselineskip
 \noindent
-\textsf{Lukas Gritsch}
+\textsf{Lukas Gritsch\\Matrikelnummer: 2210836017}
 \end{titlepage}
 \restoregeometry
 \nopagecolor
@@ -115,10 +115,11 @@ Als wir mit der Erstellung des SourceCodes fertig waren haben wir diesen in unse
  \item Erstellen des Repository auf \url{https://git.mci4me.at/}
  \begin{figure}[h]
   \begin{center}
-   \includegraphics[scale=0.3]{newRepo}
+   \includegraphics[scale=0.25]{newRepo}
    \caption{Erstellung eines neuen Repository}
   \end{center}
- \end{figure}
+ \end{figure}\\
+ Leider konnten wir das Reposetory nicht auf öffentlich stellen und so keine gegenseitigen Commits auf das Reposetory des jeweilig anderen zu machen.
  \item Link des neuen Repository kopieren:
  \begin{figure}[h]
   \begin{center}
@@ -215,7 +216,117 @@ Die Communities \textbf{DiBSE,Programmieren und Linux} Überschneidungen sich in
 \end{figure}
 Wie man in der Abbildung 6 erkennen kann bestand unser Team aus Kevin,Mira,Michael, Manuel,Mathis,Tobias,Nina und mir. Wir entschieden uns für den Teamnamen \textbf{A little bit DiBSE}. Während dem Teambuilding haben wir drei Runden Among Us gespielt. Während diesen Runden wurde meiner Meinung nach ein gutes Teamgefühl breit. Die Gruppe hat gut als Team funktioniert. Am Anfang wurde denjenigen, welche das Spiel noch nicht kannten die Regeln und Aufgaben grundlegend erklärt. Wir hatten zwei Personen (Kevin und Tobias), welche das Spiel schon kannten. Dies wurde parallel zum Download des Spiels der Teammitglieder bewerkstelligt. Meiner Meinung nach hat kam es in unserer Gruppe zu keinem sozaial loafing oder einem Free-rider Problem. Alle waren sehr bemüht die Regeln des Spiels zu lernen und zusammen als Besatzungsteam die Aufgaben am Schiff zu erledigen und die Imposter zu entlarfen. Da der Großteil von uns das Spiel noch nie gespielt hat, haben wir uns dazu entschieden, dass wir das Spiel auf der geringsten Komplexitätsstufe spielen. Es hätte noch die Moglichkeit gegeben einen Detektiv einzubinden, wir sind aber bei den Rollen Besatzungsmitglied und Imposter geblieben. Das einzige, was am Anfang nicht sehr gut Funktioniert hat war die Kommunikation der einzelnen Teammitglieder. Man konnte erkennen, dass alle am Anfang noch etwas schüchtern waren, dies wurde aber im laufe des Teambuildings immer besser. Da vom Spiel die Rollen der Imposter und der Besatzungsmitglieder jede Rolle Zufällig zugeordnet wurden haben wir keinen fixen Aufgabenmanager,Boten,Zeitwächter,Schreiber,Prozessbeobachter,Präsentator oder Moderator gehabt. Es war eher so, dass derjenige, welcher zum Beispiel den Fund einer Leiche gemeldet hat auch die Moderation der Diskussionsrunde übernahm. Nachdem wir die drei Runden des Spiels  absolviert haben, haben wir uns über die Aufgabe im Portfolio unterhalten. In dieser Unterhaltung ist der Teamname entstanden und wir haben uns Kurz über die Fragen unterhalten, welche hier beantwortet werden sollen. Hier sind wir dann auch zum Schluss gekommen, dass dies jeder für sich selbst zusammenfassen sollte.\vspace{0.5cm}\\
 Persönlich fand ich die Teambuilding-Aktivität sehr spannend und passend. Generell finde ich die Idee ein Teambuilding mittels eines Computerspiels zu machen sehr innovativ. Ich habe schon an vielen Teambuldins teilgenommen, welche zwar immer mit persönlicher Anwesenheit Vorort Verbunden waren, aber nie so schnell Wirkung gezeigt haben. Bei diesem Spiel konnte man sehr gut beobachten wie schnell alles aus unsrem Team zusammengearbeitet haben um die Aufgabe zu erfüllen und aus meiner Sicht auch Spaß daran hatten. Ich finde Spiele als Online-Teambuilding eine sehr gute Idee und finde Among Us ist dafür auch sehr gut geeignet. Damit man sich als Gruppe die einzelnen Rollen einteilten könnte und noch enger als Team zusammen Arbeiten muss fände ich Strategiespiele wie "Age of Empires" oder "Stronghold" eine gute Idee. Der einzige Hacken an diesen Spielen ist es, dass diese nicht Kostenlos sind und man diese auch nicht so einfach wie Among Us online spielen kann. Ansonsten könnte ich mir noch "Online-Escaperooms" als gute Online-Teambuilding-Aktivität vorstellen.
+\section{Zusammenarbeit im DiBSE Studium}
+Unsere Aufgabe im vierten Webinar war es einen Steckbrief zu erstelle, danach haben wir uns in Gruppen zusammengefunden und anhand unserer Steckbriefe eine Gruppenanlyse unserer Gruppe gemacht. Zum Ende der Vorlesung haben wir noch Regeln für eine Zusammenarbeit in einer Gruppe aufstellen und uns überlegen, wie wir mit Verfehlungen dieser umgehen wollen.
+\subsection{Erstellung eines Steckbriefs}
+\fbox{\begin{minipage}{42em}
+\begin{minipage}[b]{0.23\linewidth}
+\begin{flushleft}
+\includegraphics[height=6\baselineskip]{bild.png}
+\end{flushleft}
+\end{minipage}
+\hfill
+\begin{minipage}[b]{0.77\linewidth}
+Hallo,\\
+ich beschäftige mich sehr gerne mit technischen Themen und würde hier auch meine Stärken sehen. Meine Schwächen liegen meiner Meinung nach im verfassen von Texten. Leider kann ich mich nicht wirklich in eine Kategorie aus der Literatur einordnen. Ich würde aber sagen, dass sich eine Mischung aus Easygoer und Sortierer bin. Ich mag es an Probleme struk-
+\end{minipage}
+turiert heranzugehen, finde es aber auch wichtig, dass der Humor in einer Gruppe stimmt. In einer Gruppen fühle ich mich eher bei “Background-Tätigkeiten” wohl, übernehmen aber auch gerne eine Präsentation, wenn dies gewollt ist. Generell fühle ich mich bei Gruppenarbeiten sehr wohl. Ich finde ich habe ein gutes Zeitmanagement und übernehme auch Planungstätigkeiten.
+\end{minipage}}
+\begin{figure}[h]
+ \begin{center}
+  \includegraphics[scale = 0.3]{Steckbrief.png}
+ \end{center}
+ \caption{Screenshot aus des Steckbriefs aus Sakai}
+\end{figure}
+\subsection{Gruppenanalyse}
+Ich wurde zufällig einer Gruppe mit Raphael Gabl und Rusty Rajnoch zugeordnet.
+\begin{figure}[h]
+ \begin{center}
+  \includegraphics[scale = 0.2]{gruppenanalyse.png}
+ \end{center}
+ \caption{Big Blue Button Raum unserer Gruppe}
+\end{figure}\\
+Wir hatten 30 Minuten Zeit eine Analyse unserer Gruppe zu machen. Dazu habe wir uns unserer Steckbriefe im Forum durchgelesen uns dann folgendes Dokument mithilfe von Canvas angefertigt.
 \pagebreak
+\begin{figure}[h]
+ \begin{center}
+  \includegraphics[scale = 0.35]{gruppenanalyse1.png}
+ \end{center}
+ \caption{Gruppenanalyse unserer Gruppe}
+\end{figure}\\
+Wir hatten entschlossen, dass wir alle die Rolle des Moderators übernehme werden. Dies hat auch während der Zusammenarbeit sehr gut funktioniert. Des Weiteren haben wir entschieden, dass bei so einer Gruppengröße jeder in die Präsentation eingebunden werden sollte. Die restlichen Rollen haben wir wie in Abbildung 9 zu sehen verteilt.
+\subsection{Regeln für eine gute Zusammenarbeit}
+Nachdem wir unsere Gruppe analysiert haben, haben wir Regeln aufgestellt, welche für essentiell für eine gute Gruppenarbeit sind. Diese sind:
+\begin{itemize}
+ \item Hilfsbereitschaft
+ \begin{itemize}
+  \item [] Man sollte in einer Gruppe immer Hilfsbereit sein und anderen helfen, auch wenn dies nicht immer das eigene Problem löst. Man sollte immer Versuchen gemeinsam zu gewinnen.
+ \end{itemize}
+ \item Verlässlich
+ \begin{itemize}
+  \item [] Man sollte sich immer an ausgemachte Deadlines halten und auch das Versprochene immer einhalten.
+ \end{itemize}
+ \item Pflichtbewusstsein
+ \begin{itemize}
+  \item [] Man sollte sich immer bewusst sein, dass man in einer Gruppenarbeit nicht alleine ist und deswegen auch für die Noten von anderen die Verantwortung.
+ \end{itemize}
+ \item Fristen Einhalten
+ \begin{itemize}
+  \item [] Man sollte immer die ausgemachten Fristen einhalten, denn ansonsten behindert man eventuell andere an der Weiterarbeit Ihrer Projekt-teile.
+ \end{itemize}
+ \item Gute Gesprächskultur
+ \begin{itemize}
+  \item [] Dies sollte in jedem Gespräch gewahrt werden. Vor allem aber über die Zusammenarbeit über das Internet ist es wichtig Personen aussprechen zu lassen und sich eindeutig auszudrücken, denn Gesten können manchmal nicht wahrgenommen werden.
+ \end{itemize}
+ \item Kritikfähigkeit
+ \begin{itemize}
+  \item [] Man sollte Kritik annehmen können und immer sachlich Antworten, auch wenn andere Personen die eigenen Meinung nicht teilen.
+ \end{itemize}
+ \item Probleme selber lösen versuchen
+ \begin{itemize}
+  \item [] Man sollte immer versuchen, die Problemstellungen welche einem zugetragen worden sind selber zu lösen und nicht gleich das Handtuch werfen.
+ \end{itemize}
+ \item Verständnis
+ \begin{itemize}
+  \item [] Man sollte zwar von jedem verlangen können, dass die Teile der Arbeit rechtzeitig gemacht werden. Aber auch Verständnis zeigen, wenn dies durch persönliche Problem nicht gemacht worden konnte.
+ \end{itemize}
+ \item Sein bestes geblieben
+ \begin{itemize}
+  \item [] Man sollte von jedem Teammitglied erwarten können, dass er sein bestes gibt, auch wenn dies für jede/jeden eine unterschiedliche Qualität widerspiegelt.
+ \end{itemize}
+ \item Regeln einhalten
+ \begin{itemize}
+  \item [] Man sollte sich immer an die Regeln halten, welche zu beginn einer Gruppenarbeit ausmacht.
+ \end{itemize}
+ \pagebreak
+\end{itemize}
+\begin{figure}[!ht]
+ \begin{center}
+  \includegraphics[scale = 0.36]{regeln.png}
+ \end{center}
+ \caption{Regeln für eine Gruppenarbeit}
+\end{figure}
+\pagebreak
+Zum Schluss der Vorlesung haben wir uns noch auf drei Schritte geeignet, welche wir einsetzen möchten um Regelverstöße zu ahnden. Konkret haben wir dies an den Beispiel: \textbf{Ein Gruppenmitglied wird nicht bis zum ausgemachten Zeitpunkt mit seinem Teil fertig}. Folgende Schritte würden wir einleiten:
+\begin{itemize}
+ \item [] \textbf{1. Mal} Gespräch suchen und Verständnis zeigen.
+ \item [] \textbf{2. Mal} In einem ernsthaften Gespräch klarstellen, dass dies kein gangbarer Weg ist und dem Mitglied die Konsequenzen aufzeigen.
+ \item [] \textbf{3. Mal} Aus der Gruppe ausschließen.
+\end{itemize}
+\subsection{Reflektion über die Verwendung von Canva im Hochschulbereich}
+Ich kannte Canva vor dieser Vorlesung noch nicht und wurde überrascht wie gut dies in der Zusammenarbeit funktioniert. Des Weiteren wurde ich von der Vielzahl von Vorlagen überrascht. Ich finde, dass man das Tool sehr gut im Hochschulbereich einsetzten kann. Vor allem in Aktivitäten wie Brainstorming finde ich das Tool gut, da jeder Post-it auf ein Whiteboard kleben kann und so jeder seinen Teil einbringen kann. Daraus können nun gute Ideen abgeleitet werden. Ich könnte mir vorstellen Canva folgendermaßen weiter einzusetzen:
+\begin{itemize}
+ \item Hilfe beim Brainstorming
+ \item Erstellung von sozaial Meadi Posts (dies sieht nach einem sehr interessanten Feature fürs Marketing aus)
+ \item Erstellung von Flyern oder Postwürfen.
+\end{itemize}
+Situationen, in welchen ich eher auf andere Tools zurückgreifen würde:
+\begin{itemize}
+ \item Erstellung einer Webseite
+ \item Bildbearbeitung
+\end{itemize}
+\subsection{Selbstreflexion}
+Wie ich schon in meinem Steckbrief geschrieben habe finde ich, dass ich mich im Verfassen von Texten verbessern kann. Des Weiteren will ich mich im Zitieren verbessern, da ich dies nicht wirklich kann. Des Weiteren will ich mir eine wissenschaftliche fundierte Arbeitsweise Aneignen. Dies kann nicht nur im Studium, sonder auch in der Arbeit als Software Engineer behilflich sein. Denn man sollte nichts was man von Kunden über einen Software-Fehler gesagt bekommt als wahr annehmen. Man muss sich immer selbst vom Sachverhalt überzeugen. Damit verhindert man das vergebliche Suchen in der falschen Gegend.
 \listoffigures
 \lstlistoflistings
 \end{document}
